Bugfix - Users/Search API Endpoint (#5)
* Changed http verb on search user & improvements

* Reorganized layers

* Fixed logger

* Added username filter into Users/Search Endpoint

* Fixed add users testdata fixtures
