# internal/adapters/chi-server/handlers/mappers.go
@@ -1,0 +1,9 @@
+package handlers
+
+func MapErrorIntoErrorResponse(err error) ErrorResponse {
+	return ErrorResponse{
+		Error: ErrorDetail{
+			Message: err.Error(),
+		},
+	}
+}
