# internal/adapters/chi-server/router.go
@@ -12,7 +12,7 @@ import (
 	"github.com/diogorodriguesc/boilerplate-go/internal/adapters/chi-server/middlewares"
 )
 
-// @title           My Go API
+// @title           Golang REST API Boilerplate
 // @version         1.0
 // @description     This is a sample Go REST API with Swagger documentation.
 // @host            localhost:8080
@@ -26,13 +26,13 @@ func (s *HttpServer) SetRouter() *chi.Mux {
 
 	r.Get("/swagger/*", httpSwagger.WrapHandler)
 
-	r.Group(func(r chi.Router) {
+	r.Route("/v1", func(r chi.Router) {
 		r.Use(middleware.Logger)
 		r.Use(middlewares.SetJSONResponseMiddleware())
 
 		// Users resources
-		r.Get("/v1/users", usersHandler.GetUserByEmail(s.api))
-		r.Post("/v1/users", usersHandler.CreateUser(s.api))
+		r.Post("/users/search", usersHandler.SearchUsers(s.api))
+		r.Post("/users", usersHandler.CreateUser(s.api))
 	})
 
 	return r
