# internal/adapters/postgres-service-repository/tables/models.go
@@ -4,8 +4,14 @@
 
 package sqlc
 
+import (
+	"time"
+)
+
 type User struct {
-	ID       int64  `json:"id"`
-	Username string `json:"username"`
-	Email    string `json:"email"`
+	ID        int64     `json:"id"`
+	Username  string    `json:"username"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
